--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-reanimated": "^3.9.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.2.0"
   },
   "devDependencies": {
