--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "date-fns": "^3.6.0",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.16.1",
@@ -21,7 +22,8 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^15.2.0"
+    "react-native-svg": "^15.2.0",
+    "victory-native": "^40.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -31,6 +33,7 @@
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
+    "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
